--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-834.3KB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
-  - {name: 🇸🇬 新加坡-3.78MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.36MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-3.14MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-473.5KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇯🇵 日本-519.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.90MB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-514.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-516.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-250.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.44MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: 167.88.62.68, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-9.06MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.63MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-519.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-519.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-519.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-9.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-519.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-519.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-519.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-519.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
