--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-192.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 167.88.62.68, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-4.30MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 捷克-1.28MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇨🇳 中国-334.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-671.3KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-474.8KB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
+  - {name: 🇨🇳 中国-273.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.98MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.74MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇻🇳 越南-990.4KB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
   - {name: 捷克-2.62MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇸🇬 新加坡-567.4KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇬🇧 英国-567.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-192.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 捷克-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-671.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-474.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-990.4KB/s(Youtube:不良林)
       - 捷克-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-192.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 捷克-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-671.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-474.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-990.4KB/s(Youtube:不良林)
       - 捷克-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-192.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 捷克-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-671.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-474.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-990.4KB/s(Youtube:不良林)
       - 捷克-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-192.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 捷克-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-671.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-474.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-990.4KB/s(Youtube:不良林)
       - 捷克-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-192.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 捷克-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-671.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-474.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-990.4KB/s(Youtube:不良林)
       - 捷克-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-192.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 捷克-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-671.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-474.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-990.4KB/s(Youtube:不良林)
       - 捷克-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-192.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 捷克-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-671.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-474.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-990.4KB/s(Youtube:不良林)
       - 捷克-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
