--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.57MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-1.73MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 捷克-883.3KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇸🇬 新加坡-567.4KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇬🇧 英国-567.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-376.5KB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
+  - {name: 🇫🇷 法国-2.07MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-4.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.98MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-334.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.79MB/s(Youtube:不良林), server: 164.70.68.67, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.04MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-14.26MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.04MB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 捷克-883.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 捷克-883.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 捷克-883.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-14.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 捷克-883.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 捷克-883.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 捷克-883.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 捷克-883.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-567.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-342.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-334.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
